--- a/css/resume-style.css
+++ b/css/resume-style.css
@@ -37,7 +37,7 @@ https://www.tooplate.com/view/2120-ben-resume
     --menu-bg-color:        #212529;
 
     --grey-color: #fdf675;
-    --p-color: #7d7d7a;
+    --p-color: #090808;
 
     --base-font-family:     "Plain", -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     --font-weight-bold:     600;
